# pulp-ui

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  de.aps_ui.cli.appdata.xml  de.aps_ui.cli.yml
.github/docker/: Dockerfile
.github/workflows/: flatpak.yml
cmake/: clang-tidy.cmake  gcc_analyze.cmake  sanitizer.cmake
scripts/: check_clang_format.sh  run_clang_format.sh
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/pulp/: CMakeLists.txt  PulpHelper.cpp  PulpHelper.hpp
src/backend/pulp/core/: CMakeLists.txt  ConnectionStatus.cpp  ConnectionStatus.hpp
src/backend/pulp/rpm/: CMakeLists.txt  PulpRpmHelper.cpp  PulpRpmHelper.hpp
src/backend/storage/: CMakeLists.txt  Serializer.cpp  Serializer.hpp  Settings.cpp  Settings.hpp
src/logger/: CMakeLists.txt  Logger.cpp
src/ui/: CMakeLists.txt  UiContext.cpp
src/ui/resources/: CMakeLists.txt  theme.css  ui_resources.c.xml
src/ui/utils/: CMakeLists.txt  UiUtils.cpp  UiUtils.hpp
src/ui/widgets/: CMakeLists.txt  SettingsWidget.cpp  SettingsWidget.hpp
src/ui/widgets/core/: CMakeLists.txt  ConnectionStatusWidget.cpp  ConnectionStatusWidget.hpp  ConnectivityWidget.cpp  ConnectivityWidget.hpp
src/ui/widgets/rpm/: CMakeLists.txt  RepoListWidget.cpp  RepoListWidget.hpp  RpmListWidget.cpp  RpmListWidget.hpp  RpmPackageWidget.cpp  RpmPackageWidget.hpp
src/ui/windows/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
